- removal of unused assets| - fix for incorrect bitmap copy on older devices